Refatoração: Alerta de tempo fixo

--- a/paquimetro/src/main/resources/templates/fix.html
+++ b/paquimetro/src/main/resources/templates/fix.html
@@ -9,17 +9,7 @@
 
 <p>Olá <strong th:text="${nome}">Nome</strong>!</p>
 
-<p>Seu tempo de estacionamento está expirando! Segue o recibo de estacionamento da data <strong th:text="${inicio}">inicio</strong>:</p>
-
-<div style="border: 1px solid #ccc; padding: 10px; margin: 10px 0;">
-    <p><strong>Recibo:</strong></p>
-    <p><strong>Data/hora início: </strong><span th:text="${inicio}"> Inicio</span></p>
-    <p><strong>Data/hora fim: </strong> <span th:text="${fim}">Fim</span></p>
-    <p><strong>Valor: </strong>R$ <span th:text="${valor}">valor</span></p>
-    <p><strong>Multa: </strong>R$ <span th:text="${multa}">multa</span> </p>
-    <p><strong>Total: </strong>R$ <span th:text="${total}"> total</span></p>
-
-</div>
+<p>Seu tempo de estacionamento está expirando! Vá até o parquimetro e encerre seu tempo o quanto antes!</p>
 
 </body>
 </html>
